# video-analytics-bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: load_data.py
src/bot/: handlers.py  main.py
src/core/: config.py  llm.py  logger.py  prompts.py
src/db/: models.py  repository.py  session.py
